tests/paczka1/fuzzy1/75273716.err
Error in line 1: A709 A709 68,9
Error in line 5: 9vYxEguG1kD A480 43,1
Error in line 2: A709 A480 78,8
Error in line 21: xgTQhO3oN S654 5,1
Error in line 11: nvo A709 59,6
Error in line 27: A709 S654 132,0
Error in line 28: nvo A480 15,2
Error in line 26: jbgxVYl A709 84,5
